[metadata]
name = gh-tools
version = 0.0.1
author = Yuta Nakamura
author_email = nakamurayuta0204@gmail.com
description = github related tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonyuta0204/gh-tools
project_urls =
    Bug Tracker = https://github.com/bonyuta0204/gh-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    PyGithub
    typer

[options.entry_points]
console_scripts =
        gh-tools = gh_tools.cli:app

[options.packages.find]
where = .
